侧边栏编码换了

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "MoXiangyu(ÄªÏæÓå)"
+  name             : "MoXiangyu(è«æ¹˜æ¸)"
   pronouns         : # example: "she/her"  
   bio              : "Robotics student working on UAV control systems, embedded electronics, and system-level prototyping."
   location         : "China ChongQing"
