--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ title                    : "MoXiangyu(莫湘渝) / Extract"
 title_separator          : "-"
 name                     : &name "MoXiangyu(莫湘渝)"
 description              : &description "MoXiangyu(莫湘渝)'s academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : https://momo-612-coder.github.io/academicpages.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+url                      : https://momo-612-coder.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+baseurl                  : "/academicpages.github.io" # the subpath of your site, e.g. "/blog"
 repository               : "Momo-612-coder/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
