--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
     url: /publications/
 
   - title: "Honours"
-    url: /honours/    
+    url: /talks/    
 
   - title: "Teaching"
     url: /teaching/    
