--- a/_config.yml
+++ b/_config.yml
@@ -84,9 +84,9 @@ publication_category:
   books:
     title: 'Books'
   manuscripts:
-    title: 'Journal Articles'    
+    title: 'Comprehensive Extracurricular Practice'    
   conferences:
-    title: 'Conference Papers'
+    title: 'Specialized Courses Projects'
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/ for social media previews
